k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  generation: 1
  name: rest
  namespace: nico-rest
spec:
  rules:
  - host: rest.alba.care
    http:
      paths:
      - backend:
          service:
            name: rest-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
